# binance-history-scrapper

./: .gitignore  Cargo.toml  README.md  binance-history-scrapper  build.rs  download.go  extract.go  go.mod  go.sum  input.go  main.go  merge.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  start_dates.json  structs.go
src/: asset_file.rs  download.rs  extract.rs  input.rs  main.rs  merge.rs  vomi.json
src/tests/test_utils/: mod.rs  test_asset_file.rs  test_integrity.rs
src/utils/: asset_file.rs  errors.rs  integrity.rs  manifest.rs  mod.rs  month_year.rs  process_data.rs  start_dates.rs
utils/: log.go
