[package]
name = "binance-history-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
ureq = "2.9.6"
zip = "0.6.6"
csv = "1.3.0"
serde_json = "1.0.114"

[build-dependencies]
winres = "0.1.12"
